--- a/styles.css
+++ b/styles.css
@@ -8,3 +8,11 @@ h1 {
     text-align: center;
     font-size: 40px;
 }
+
+img {
+   height: auto; 
+   width: 300px;
+   display: block;
+   margin-left: auto;
+   margin-right: auto;
+}
