--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 * {
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'Playpen Sans', cursive;
     background-color:#1C2826;
     color: #EEF4D4;
 }
