--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,13 @@
 * {
     font-family: 'Playpen Sans', cursive;
-    background-color:#1C2826;
-    color: #EEF4D4;
+    background-color: #f2e8cf;
+    color: black;
 }
 
 h1 {
     text-align: center;
     font-size: 40px;
+    color: #606c38;
 }
 
 img {
