--- a/styles.css
+++ b/styles.css
@@ -10,19 +10,9 @@ h1 {
     color: #606c38;
 }
 
-img {
-   height: auto; 
-   width: 300px;
-   display: block;
-   margin-left: auto;
-   margin-right: auto;
-}
 
-div {
-    margin: 0 auto;
-    width: fit-content;
-}
 
-span {
-    margin: 0 35px;
+body {
+    display: flex;
+    flex-direction: column;
 }
