--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 
 h1 {
     text-align: center;
-    font-size: 40px;
+    font-size: 60px;
     color: #606c38;
 }
 
@@ -27,8 +27,21 @@ body {
 .outer-container {
     display: flex;
     flex-direction: column;
+    gap: 30px;
 }
 
 .inner-container {
     display: flex;
+    text-align: center;
+    font-size: 30px;
+    justify-content: center;
+    gap: 30px;
+}
+
+#title-container {
+    margin: 50px 0 100px 0;
+}
+
+a{
+    text-decoration: none;
 }
