--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,13 @@
 * {
     font-family: 'Playpen Sans', cursive;
-    background-color: #f2e8cf;
+    background-color: #EFE7DD;
     color: black;
 }
 
 h1 {
     text-align: center;
     font-size: 60px;
-    color: #606c38;
+    color: #68864D;
 }
 
 
@@ -42,6 +42,24 @@ body {
     margin: 50px 0 100px 0;
 }
 
-a{
+div a{
     text-decoration: none;
+}
+
+.title-icon {
+    height: auto;
+    width: 400px;
+}
+
+.title {
+    font-size: 60px;
+}
+
+.upper-section {
+   
+}
+
+#nasi-lemak-title {
+    background-color: #4b6103;
+    color: white;
 }
