--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,7 @@ div a{
     padding: 20px;
 }
 
-headers {
+.headers {
     font-size: 35px;
 }
 
@@ -105,4 +105,13 @@ headers {
 .kaya-toast {
     background-color: #D4B57B;
     color: #EFE7DD;
+}
+
+.satay {
+    background-color: #AE6F3A;
+    color: #F8F7F4;
+}
+
+.satay-headers {
+    color: #AE6F3A;
 }
