Add the styles for mee-kari

--- a/styles.css
+++ b/styles.css
@@ -115,3 +115,12 @@ div a{
 .satay-headers {
     color: #AE6F3A;
 }
+
+.mee-kari {
+    background-color: #E78663;
+    color: #EFE7DD;
+}
+
+.mee-kari-headers {
+    color: #E78663;
+}
