Add the styles for pan-mee

--- a/styles.css
+++ b/styles.css
@@ -124,3 +124,12 @@ div a{
 .mee-kari-headers {
     color: #E78663;
 }
+
+.pan-mee {
+    background-color: #E1B863;
+    color: #E6E4D8;
+}
+
+.pan-mee-headers {
+    color: #E1B863;
+}
